--- a/main.ui
+++ b/main.ui
@@ -23,6 +23,32 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="NewButton">
+   <property name="geometry">
+    <rect>
+     <x>34</x>
+     <y>480</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Добавить</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="EditButton">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>480</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Редактировать</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
